--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -723,7 +723,7 @@ validation environment (available at \url{http://purl.org/net/rdfval-demo})\foot
 %\footnote{\url{http://www.w3.org/Submission/shex-primer/}}
 Resource Shapes, and the Web Ontology Language\footnote{\textcolor{red}{SPIN mappings available at: \url{https://github.com/boschthomas/rdf-validation/SPIN}}} \cite{BoschEckert2014-2}.
 The \emph{RDF Validator} also validates RDF data to ensure correct syntax, semantics, and integrity of diverse vocabularies such as \emph{Disco, QB, PHDD, SKOS, and XKOS}.
-Although accessible within our validation tool, we provide all implemented constraints\footnote{\textcolor{red}{\url{https://github.com/boschthomas/rdf-validation/tree/master/constraints}}} in form of SPARQL CONSTRUCT queries.
+Although accessible within our validation tool, we provide all implemented constraints\footnote{\url{https://github.com/boschthomas/rdf-validation/tree/master/constraints}} in form of SPARQL CONSTRUCT queries.
 For the subsequent evaluation, we implemented 212 constraints on \emph{Disco}, \emph{QB}, \emph{SKOS}, \emph{XKOS}, and \emph{PHDD} data sets.
 The SPIN engine checks for each resource if it satisfies all constraints, which are associated with its assigned classes, and generates a result RDF graph containing information about all constraint violations.
 There is one SPIN construct template for each constraint type and vocabulary-specific constraint\footnote{For a comprehensive description of the \emph{RDF Validator}, we refer to \cite{BoschEckert2014-2}}.
